# bedroom_lights

./: Cargo.toml  Makefile  build.rs  esp32decode.py  sdkconfig.defaults  wokwi.toml
src/: blah.rs  esp.rs  main.rs  wifi.rs  wokwi.rs
